Prevent jumping text with images

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -12,7 +12,6 @@
   text-align: center;
 }
 
-
 .fadein {
   animation: fadein 1.5s backwards ease-in-out;
 }
@@ -64,7 +63,6 @@
     width: 100%;
     @include flex(center, center, row);
     border-radius: 0.5rem;
-    background: rgba(172, 49, 32, 0.2);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
       0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
     transition: all 0.5s ease-in-out;
@@ -76,6 +74,7 @@
 
     & img {
       width: 100%;
+      height: auto;
       object-fit: cover;
       transition: all 0.5s ease-in-out;
     }
@@ -96,8 +95,7 @@
 }
 
 /* Mobile */
-@media screen and (max-width:450px) {
-
+@media screen and (max-width: 450px) {
   .text h5 {
     width: 70%;
     margin: auto;
@@ -110,7 +108,6 @@
 
 /* Tablet */
 @media screen and (min-width: 600px) {
-
   .social {
     & ul {
       gap: 1rem;
@@ -129,7 +126,6 @@
   }
 
   .social-icon.hero-icon {
-
     & img {
       width: 2.5rem;
     }
@@ -162,7 +158,6 @@
 /* Large Desktop */
 @media screen and (min-width: 1700px) {
   .portfolio {
-
     & h2,
     .projects {
       margin: 1.5rem 3rem 0 3rem;
